added some controllers for some angular assignments.

--- a/JSCodealong/JSCodealong.csproj
+++ b/JSCodealong/JSCodealong.csproj
@@ -125,6 +125,8 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="index.html" />
+    <Content Include="app.html" />
+    <Content Include="Scripts\app.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -140,6 +142,9 @@
     <Content Include="Scripts\myScript.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\showHideController.js" />
+    <Content Include="Scripts\storeController.js" />
+    <Content Include="Scripts\stringReverse.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
